--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Delete.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Excluir</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente excluir?</h3>
 <div>
-    <h4>Department</h4>
+    <h4>Departamento</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,9 +19,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Excluir">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar para a lista</a>
     </form>
 </div>
