--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Delete.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Excluir</h1>
+<h1>Delete</h1>
 
 <h3>Deseja realmente excluir?</h3>
 <div>
@@ -19,7 +19,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Excluir">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Excluir" class="btn btn-danger" /> |
         <a asp-action="Index">Voltar para a lista</a>
