--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Create.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Create.cshtml
@@ -20,14 +20,15 @@
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
+            <div>
+                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+            </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Voltar para lista</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
