--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Departamentos</h1>
 
 <p>
-    <a asp-action="Create">Novo</a>
+    <a asp-action="Create" class="btn btn-success">Adicionar</a>
 </p>
 <table class="table">
     <thead>
