--- a/SallesWebMvc/SallesWebMvc/Views/Sellers/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Sellers/Index.cshtml
@@ -6,9 +6,13 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<p>
+    <a asp-action="Create" class="btn btn-success">Adicionar</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
-        <tr class = "success">
+        <tr class = "btn-info">
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
