--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Create.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Criar</h1>
+<h1>Cadastro de Departamento</h1>
 
-<h4>Departamento</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
