--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Create.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Create.cshtml
@@ -16,11 +16,10 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <hr/>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
-            </div>
-            <div>
-                <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
     </div>
