--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Delete.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Delete.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deseja realmente excluir?</h1>
 
-<h3>Deseja realmente excluir?</h3>
 <div>
     <h4>Departamento</h4>
     <hr />
@@ -21,7 +20,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Excluir" class="btn btn-danger" /> |
-        <a asp-action="Index">Voltar para a lista</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
