--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Details.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Details.cshtml
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Voltar para lista</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-danger">Editar</a> 
+    <a asp-action="Index" class="btn btn-secondary">Voltar para lista</a>
 </div>
