--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Edit.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Edit.cshtml
@@ -18,10 +18,10 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <hr/>
             <div class="form-group">
                 <input type="submit" value="Editar" class="btn btn-primary" />
-
-                <a asp-action="Index">Voltar para lista</a>
+                <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
     </div>
