--- a/SallesWebMvc/SallesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Sellers/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SallesWebMvc.Models.ViewModels.SellerFormViewModel
 
 @{
-    ViewData["Title"] = "Cadasto de Vendedor";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,22 +9,23 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
+            <input type="hidden" asp-for="Seller.Id"/>
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control" placeholder="Nome" />
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="control-label"></label>
-                <input asp-for="Seller.Email" class="form-control" placeholder="mail@mail.com.br" />
+                <input asp-for="Seller.Email" class="form-control"/>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BirthDate" class="control-label"></label>
-                <input asp-for="Seller.BirthDate" class="form-control" placeholder="dd/mm/aaaa" />
+                <input asp-for="Seller.BirthDate" class="form-control"/>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="control-label"></label>
-                <input asp-for="Seller.BaseSalary" class="form-control" placeholder="1.000,00" />
+                <input asp-for="Seller.BaseSalary" class="form-control"/>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="control-label"></label>
@@ -32,7 +33,7 @@
             </div>
             <hr />
             <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
