--- a/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:cornflowerblue">
-            <div class="container-fluid">
+            <div class="container-fluid container justify-content-center">
                 <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">SallesWebMvc</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -34,6 +34,10 @@
                     </ul>
                 </div>
             </div>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+            </form>
         </nav>
     </header>
     <div class="container">
