--- a/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
@@ -35,8 +35,10 @@
                 </div>
             </div>
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                <div class="form-group mx-sm-3 mb-2">
+                    <input type="search" class="form-control" id="inputPassword2" placeholder="Pesquisa">
+                    <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
+                </div>
             </form>
         </nav>
     </header>
