--- a/SallesWebMvc/SallesWebMvc/Views/Sellers/Create.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Sellers/Create.cshtml
@@ -12,22 +12,22 @@
         <form asp-action="Create">
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
-                <input asp-for="Seller.Name" class="form-control" placeholder="Nome" />
+                <input asp-for="Seller.Name" class="form-control"/>
                 <span asp-validation-for="Seller.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="control-label"></label>
-                <input asp-for="Seller.Email" class="form-control" placeholder="mail@mail.com.br" />
+                <input asp-for="Seller.Email" class="form-control"/>
                 <span asp-validation-for="Seller.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BirthDate" class="control-label"></label>
-                <input asp-for="Seller.BirthDate" class="form-control" placeholder="dd/mm/aaaa" />
+                <input asp-for="Seller.BirthDate" class="form-control"/>
                 <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="control-label"></label>
-                <input asp-for="Seller.BaseSalary" class="form-control" placeholder="1.000,00" />
+                <input asp-for="Seller.BaseSalary" class="form-control"/>
                 <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>
             </div>
             <div class="form-group">
