--- a/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
@@ -29,17 +29,17 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Sellers" asp-action="Index">Vendedores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="SallesRecords" asp-action="Index">Vendas</a>
                         </li>
                     </ul>
                 </div>
                 <form class="form-inline">
-                    <div class="form-group mx-sm-3 mb-2">
+                    <div class="form-group mx-sm-3 mb-2 mb-3">
                         <input type="search" class="form-control" id="inputPassword2" placeholder="Pesquisa">
                     </div>
                 </form>
-                <form class="form-inline">
-                    <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
+                <form class="form-inline" style="text-align:center">
+                    <button type="submit" class="btn btn-primary mb-2 mb-3">Pesquisar</button>
                 </form>
             </div>
         </nav>
@@ -51,8 +51,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - SallesWebMvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container" style="text-align:center">
+            2022 - Página Web
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
