--- a/SallesWebMvc/SallesWebMvc/Views/SallesRecords/SimpleSearch.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/SallesRecords/SimpleSearch.cshtml
@@ -1,7 +1,82 @@
-﻿
+﻿@model IEnumerable<SallesWebMvc.Models.SellesRecord>
+
 @{
     ViewData["Title"] = "SimplesSearch";
 }
 
 <h1>Consulta Simples</h1>
 
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <form class="navbr-form navbar-left" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="dataInicial">Data Inicial</label>
+                    <input type="date" class="form-control" name="dataInicial" value=@ViewData["dataInicial"]/>
+                </div>
+                <div class="form-group">
+                    <label for="dataFinal">Data Final</label>
+                    <input type="date" class="form-control" name="dataFinal" value=@ViewData["dataFinal"]/>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Filtrar</button>
+        </form>
+    </div>
+</nav>
+
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">Total de Vendas = R$@Model.Sum(obj => obj.Amount).ToString("F2")</h3>
+    </div>
+    <div class="panel-body">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr class="success">
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seller)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seller.Department)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Amount)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Date)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Department.Name)
+                        </td>
+                        <td>
+                            R$@Html.DisplayFor(modelItem => item.Amount)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
