acrescentando cadastro de protudos no projeto

--- a/SallesWebMvc/SallesWebMvc/Views/Home/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Home/Index.cshtml
@@ -3,46 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem-Vindo</h1><hr />
-    <a asp-action="home" asp-controller="homecontroler" class="btn btn-primary btn-lg">Acessar</a>
-    <hr/>
-    <div class="container-fluid">
-        <section id="sobre">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-                    <img src="~/images/lanche01.jpg" width="200" height="200" />
-                    <span class="glyphicon glyphicon-ok text-primary"></span>
-                    <h3>Vinhos Exclusivos</h3>
-                    <p class="text-muted">Oferecemos somente vinhos exclusivos.</p>
-                    <div class="btn btn-success">Adicionar ao carrinho</div><hr />
-                    <div class="btn btn-primary">Comprar</div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-                    <img src="~/images/lanche02.jpg" width="200" height="200" />
-                    <span class="glyphicon glyphicon-plane text-primary"></span>
-                    <h3>Prontos para entrega</h3>
-                    <p class="text-muted">Despachamos para todo o Brasil!</p>
-                    <div class="btn btn-success">Adicionar ao carrinho</div><hr />
-                    <div class="btn btn-primary">Comprar</div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-                    <img src="~/images/lanche03.jpg" width="200" height="200" />
-                    <span class="glyphicon glyphicon-phone text-primary"></span>
-                    <h3>Layout Responsivo</h3>
-                    <p class="text-muted">Layout responsivo para aplicações no celular.</p>
-                    <div class="btn btn-success">Adicionar ao carrinho</div><hr />
-                    <div class="btn btn-primary">Comprar</div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 text-center">
-                    <img src="~/images/lanche04.jpg" width="200" height="200" />
-                    <span class="glyphicon glyphicon-heart text-primary"></span>
-                    <h3>Preparados com amor</h3>
-                    <p class="text-muted">...e uvas, muitas uvas...</p>
-                    <a class="btn btn-success">Adicionar ao carrinho</a><hr />
-                    <a class="btn btn-primary">Comprar</a>
-                </div>
-            </div>
-        </section>
-    </div>
-    <p>Leia mais <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem-Vindo</h1>
 </div>
