--- a/SallesWebMvc/SallesWebMvc/Views/Sellers/Create.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Sellers/Create.cshtml
@@ -43,13 +43,13 @@
     </div>
 </div>
 
-@*@section Scripts {
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    }*@
+    }
 
-<script>
+@*<script>
     (function () {
         'use strict';
         window.addEventListener('load', function () {
@@ -67,4 +67,4 @@
             });
         }, false);
     })();
-</script>
+</script>*@
