--- a/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="SallesRecords" asp-action="Index">Vendas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
+                        </li>
                     </ul>
                 </div>
                 <form class="form-inline">
