--- a/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
@@ -23,7 +23,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => produto.Id)
+                    @Html.DisplayFor(modelItem => produto.Descricao)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@produto.Id">Editar</a> |
