--- a/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
@@ -4,33 +4,65 @@
     ViewData["Title"] = "Produtos";
 }
 
-<h1>Produtos</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-success">Adicionar</a>
 </p>
-<table class="table">
+
+<table class="table table-striped table-hover">
     <thead>
-        <tr>
+        <tr class = "btn-info">
             <th>
                 @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Descricao)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Marca)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Unidade)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CodBarras)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Preco)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var produto in Model)
+        @foreach (var item in Model)
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => produto.Descricao)
+                    @Html.DisplayFor(modelItem => item.Id)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@produto.Id">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@produto.Id">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@produto.Id">Excluir</a>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Marca)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Unidade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CodBarras)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Preco)
+                </td>
+                <td>
+                    <a asp-action = "Edit" asp-route-id = "@item.Id">Editar</a>
+                    <a asp-action = "Details" asp-route-id = "@item.Id">Detalhes</a>
+                    <a asp-action = "Delete" asp-route-id = "@item.Id">Excluir</a>
                 </td>
             </tr>
         }
     </tbody>
+
 </table>
