--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create" class="btn btn-success">Adicionar</a>
 </p>
-<table class="table">
+<table class="table  table-striped table-hover text-align:center">
     <thead>
         <tr>
             <th>
@@ -23,12 +23,14 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
+                    <font size="4">
+                      @Html.DisplayFor(modelItem => item.Name)
+                    </font>
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
+                    <a asp-action="Edit" class="btn btn-info" style="margin:auto" asp-route-id="@item.Id">Editar</a>
+                    <a asp-action="Details" class="btn btn-warning" style="margin:auto" asp-route-id="@item.Id">Detalhes</a>
+                    <a asp-action="Delete" class="btn btn-danger" style="margin:auto" asp-route-id="@item.Id">Excluir</a>
                 </td>
             </tr>
         }
