--- a/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
@@ -10,9 +10,21 @@
     <a asp-action="Create" class="btn btn-success">Adicionar</a>
 </p>
 
-<table class="table table-striped table-hover">
+<div class="row">
+    <div class="col-md-6">
+        <form class="form-horizontal" asp-action="SearchById">
+            <legend>Pesquisa</legend>
+            <div class="input-group-sm mb-3">
+                <input name="id" class="form-control" placeholder="Descrição do Produto" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<table class="table table-striped table-hover table-sm">
     <thead>
-        <tr class = "btn-info">
+        <tr class="btn-info">
             <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
@@ -20,7 +32,7 @@
                 @Html.DisplayNameFor(model => model.Descricao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Marca)
+                @Html.DisplayNameFor(model => model.Marca.Descricao)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Unidade)
@@ -39,27 +51,39 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Id)
+                    <font size="4">
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </font>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Descricao)
+                    <font size="4">
+                        @Html.DisplayFor(modelItem => item.Descricao)
+                    </font>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Marca)
+                    <font size="4">
+                        @Html.DisplayFor(modelItem => item.Marca.Descricao)
+                    </font>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Unidade)
+                    <font size="4">
+                        @Html.DisplayFor(modelItem => item.Unidade)
+                    </font>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.CodBarras)
+                    <font size="4">
+                        @Html.DisplayFor(modelItem => item.CodBarras)
+                    </font>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Preco)
+                    <font size="4">
+                        @Html.DisplayFor(modelItem => item.Preco)
+                    </font>
                 </td>
                 <td>
-                    <a asp-action = "Edit" asp-route-id = "@item.Id">Editar</a>
-                    <a asp-action = "Details" asp-route-id = "@item.Id">Detalhes</a>
-                    <a asp-action = "Delete" asp-route-id = "@item.Id">Excluir</a>
+                    <a asp-action="Edit" class="btn btn-info" style="margin:auto" asp-route-id="@item.Id">Editar</a>
+                    <a asp-action="Details" class="btn btn-warning" style="margin:auto" asp-route-id="@item.Id">Detalhes</a>
+                    <a asp-action="Delete" class="btn btn-danger" style="margin:auto" asp-route-id="@item.Id">Excluir</a>
                 </td>
             </tr>
         }
