--- a/SallesWebMvc/SallesWebMvc/Views/Departments/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Departments/Index.cshtml
@@ -28,9 +28,9 @@
                     </font>
                 </td>
                 <td>
-                    <a asp-action="Edit" class="btn btn-info" style="margin:auto" asp-route-id="@item.Id">Editar</a>
-                    <a asp-action="Details" class="btn btn-warning" style="margin:auto" asp-route-id="@item.Id">Detalhes</a>
-                    <a asp-action="Delete" class="btn btn-danger" style="margin:auto" asp-route-id="@item.Id">Excluir</a>
+                    <a asp-action="Edit" class="btn btn-outline-primary" style="margin:auto" asp-route-id="@item.Id">Editar</a>
+                    <a asp-action="Details" class="btn btn-outline-warning" style="margin:auto" asp-route-id="@item.Id">Detalhes</a>
+                    <a asp-action="Delete" class="btn btn-outline-danger" style="margin:auto" asp-route-id="@item.Id">Excluir</a>
                 </td>
             </tr>
         }
