--- a/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Produtos/Index.cshtml
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<table class="table table-striped table-hover table-sm">
+<table class="table  table-striped table-hover text-align:center">
     <thead>
         <tr class="btn-info">
             <th>
@@ -30,9 +30,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Descricao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Marca.Descricao)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Unidade)
@@ -62,11 +59,6 @@
                 </td>
                 <td>
                     <font size="4">
-                        @Html.DisplayFor(modelItem => item.Marca.Descricao)
-                    </font>
-                </td>
-                <td>
-                    <font size="4">
                         @Html.DisplayFor(modelItem => item.Unidade)
                     </font>
                 </td>
@@ -81,9 +73,9 @@
                     </font>
                 </td>
                 <td>
-                    <a asp-action="Edit" class="btn btn-info" style="margin:auto" asp-route-id="@item.Id">Editar</a>
-                    <a asp-action="Details" class="btn btn-warning" style="margin:auto" asp-route-id="@item.Id">Detalhes</a>
-                    <a asp-action="Delete" class="btn btn-danger" style="margin:auto" asp-route-id="@item.Id">Excluir</a>
+                    <a asp-action="Edit" class="btn btn-outline-info" style="margin:auto" asp-route-id="@item.Id">Editar</a>
+                    <a asp-action="Details" class="btn btn-outline-warning" style="margin:auto" asp-route-id="@item.Id">Detalhes</a>
+                    <a asp-action="Delete" class="btn btn-outline-danger" style="margin:auto" asp-route-id="@item.Id">Excluir</a>
                 </td>
             </tr>
         }
