--- a/SallesWebMvc/SallesWebMvc/Views/Sellers/Create.cshtml
+++ b/SallesWebMvc/SallesWebMvc/Views/Sellers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SallesWebMvc.Models.ViewModels.SellerFormViewModel
 
 @{
-    ViewData["Title"] = "Cadasto de Vendedor";
+    ViewData["Title"] = "Create";
 }
 
 <h1>@ViewData["Title"]</h1>
